# makarandkokane_portfolio

./: README.md
notes/: code_sample_win32_proj1.txt  code_sample_win32_vtk_proj1.txt
trials/sample_win_proj1/: sample_win_proj1.sln
trials/sample_win_proj1/sample_win_proj1/: Resource.h  sample_win_proj1.cpp  sample_win_proj1.rc  sample_win_proj1.vcxproj  sample_win_proj1.vcxproj.filters  stdafx.cpp
trials/samplewin32_vtk_proj1/: CMakeLists.txt  sampleWin32VTKProj1.cxx
utilities/: mkEnvironmentVariables.cxx  mkEnvironmentVariables.h  mkFilesystem.cxx  mkFilesystem.h  mkMemoryRawArrays.cxx  mkMemoryRawArrays.h
utilities/unittests1/: CMakeLists.txt  unittests1.cxx
utilities/unittests2_onlystd/: CMakeLists.txt  unittests2_onlystd.cxx
vtk/: mkVisualizeAlgorithmOutput.cxx  mkVisualizeAlgorithmOutput.h
vtk/glyph/: CMakeLists.txt  glyph3d_example.cxx
vtk/vtk_dicom/: CMakeLists.txt  vtk_dicom_example.cxx
